# GMSHparser

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Matlab/: GMSHparserV2.m  GMSHparserV4.m  TestParsers.m  export_test_references.m
cpp/: CMakeLists.txt
cpp/cmake/: GMSHparserConfig.cmake.in
cpp/include/gmshparser/: ElementTypes.hpp  GMSHparserTools.hpp  GMSHparserV2.hpp  GMSHparserV4.hpp  Globals.hpp  MdimArray.hpp  ParseHelpers.hpp  ParseTools.hpp  ParseV2.hpp  ParseV4.hpp  Types.hpp
cpp/tests/: MeshExpectations.hpp  MeshPath.hpp  TestElementTypes.cpp  TestGMSHparserV2.cpp  TestGMSHparserV4.cpp
examples/: plot_mesh.py  summarize_mesh.py
meshes/: .gitignore  box.geo  build_meshes.sh  clean_meshes.sh  sector_extruded_mixed.geo  sector_mixed.geo  simple_rectangle.geo  square_extruded_hex.geo  square_extruded_mixed.geo  square_extruded_prism.geo  square_mixed.geo  square_quad.geo  square_tri.geo
python/: CMakeLists.txt
python/gmshparser/: __init__.py  _summarize.py
python/src/: bindings.cpp
tests/: conftest.py  generate_references.py  matlab_reference.py  test_meshes.py  test_summarize.py
tests/reference/: clean_references.sh
